plugins {
    id("java-library")

    // code quality
    id("checkstyle")
    alias(libs.plugins.errorprone)
    alias(libs.plugins.owasp)
    alias(libs.plugins.spotbugs)
    alias(libs.plugins.openrewrite)
}

apply from: rootProject.file("gradle/build-conventions.gradle")

group = "com.protexius.trace4eo"
version = "0.1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

dependencies {
    api(libs.jackson.databind)
    api(libs.sigstore.java)
    implementation("org.slf4j:slf4j-api:2.0.17")

    errorprone(libs.error.prone.core)
    rewrite(libs.rewrite.static.analysis)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

testing {
    suites {
        test {
            useJUnitJupiter("6.0.2")
        }
    }
}

dependencyCheck {
    outputDirectory = layout.buildDirectory.dir("reports/dependency-check").get()
    formats = ["XML", "HTML"]
    scanConfigurations = ["compileClasspath", "runtimeClasspath"]
    nvd {
        apiKey = providers.gradleProperty("dependencyCheck.nvd.apiKey").getOrNull()
    }
}

checkstyle {
    toolVersion = libs.versions.checkstyle.get()
}

rewrite {
    activeRecipe("org.openrewrite.java.RemoveUnusedImports")
    activeRecipe("org.openrewrite.staticanalysis.CodeCleanup")
    setExportDatatables(true)
}
